--- a/src/main/webapp/Paginas/cargo/Edit.xhtml
+++ b/src/main/webapp/Paginas/cargo/Edit.xhtml
@@ -8,19 +8,19 @@
 
     <ui:composition>
 
-        <p:dialog id="CargoEditDlg" widgetVar="CargoEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditCargoTitle}">
+        <p:dialog id="CargoEditDlg" widgetVar="CargoEditDialog" modal="true" resizable="false" appendTo="@(body)" header="Editar Cargo">
             <h:form id="CargoEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{cargoController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditCargoLabel_cargoid}" for="cargoid" />
-                        <p:inputText id="cargoid" value="#{cargoController.selected.cargoid}" title="#{bundle.EditCargoTitle_cargoid}" required="true" requiredMessage="#{bundle.EditCargoRequiredMessage_cargoid}"/>
-                        <p:outputLabel value="#{bundle.EditCargoLabel_nombreCargo}" for="nombreCargo" />
-                        <p:inputText id="nombreCargo" value="#{cargoController.selected.nombreCargo}" title="#{bundle.EditCargoTitle_nombreCargo}" required="true" requiredMessage="#{bundle.EditCargoRequiredMessage_nombreCargo}"/>
-                        <p:outputLabel value="#{bundle.EditCargoLabel_salarioMensual}" for="salarioMensual" />
-                        <p:inputText id="salarioMensual" value="#{cargoController.selected.salarioMensual}" title="#{bundle.EditCargoTitle_salarioMensual}" required="true" requiredMessage="#{bundle.EditCargoRequiredMessage_salarioMensual}"/>
+                        <p:outputLabel value="Nombre del cargo: " for="nombreCargo" />
+                        <p:inputText class="form-control" id="nombreCargo" value="#{cargoController.selected.nombreCargo}" title="#{bundle.EditCargoTitle_nombreCargo}" required="true" requiredMessage="#{bundle.EditCargoRequiredMessage_nombreCargo}"/>
+                        <p:outputLabel value="Salario mensual: " for="salarioMensual" />
+                        <p:inputText class="form-control" id="salarioMensual" value="#{cargoController.selected.salarioMensual}" title="#{bundle.EditCargoTitle_salarioMensual}" required="true" requiredMessage="#{bundle.EditCargoRequiredMessage_salarioMensual}"/>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{cargoController.update}" value="#{bundle.Save}" update="display,:CargoListForm:datalist,:growl" oncomplete="handleSubmit(args, 'CargoEditDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="CargoEditDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-success" actionListener="#{cargoController.update}" value="Guardar" update="display,:CargoListForm:datalist,:growl" oncomplete="handleSubmit(args, 'CargoEditDialog');"/>
+                    <p:commandButton class="btn btn-sm btn-danger" value="Cancelar" onclick="CargoEditDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
