--- a/src/main/webapp/Paginas/cargo/List.xhtml
+++ b/src/main/webapp/Paginas/cargo/List.xhtml
@@ -4,54 +4,67 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
     <ui:composition template="/template.xhtml">
 
 
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListCargoTitle}"></h:outputText>
+            <h:outputText value="Cargos"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
             <h:form id="CargoListForm">
-                <p:panel header="#{bundle.ListCargoTitle}">
-                    <p:dataTable id="datalist" value="#{cargoController.items}" var="item"
+                <br></br>
+                <br></br>
+                <center>
+                <h1 style="background-color: #D4E3FF">Modulo de Cargos</h1>
+                <br></br>
+                <br></br>
+                </center>
+                <p:panel style="background-color: #D4E3FF">
+                    <br></br>
+                    <br></br>
+                    <p:dataTable styleClass="table table-sm table-light" id="datalist" value="#{cargoController.items}" var="item"
                                  selectionMode="single" selection="#{cargoController.selected}"
                                  paginator="true"
                                  rowKey="#{item.cargoid}"
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
-
+                        <br></br>
+                        <br></br>
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCargoTitle_cargoid}"/>
+                                <h:outputText value="Id"/>
                             </f:facet>
                             <h:outputText value="#{item.cargoid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCargoTitle_nombreCargo}"/>
+                                <h:outputText value="Nombre del cargo"/>
                             </f:facet>
                             <h:outputText value="#{item.nombreCargo}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListCargoTitle_salarioMensual}"/>
+                                <h:outputText value="Salario Mensual"/>
                             </f:facet>
                             <h:outputText value="#{item.salarioMensual}"/>
                         </p:column>
+
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{cargoController.prepareCreate}" update=":CargoCreateForm" oncomplete="PF('CargoCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":CargoViewForm" oncomplete="PF('CargoViewDialog').show()" disabled="#{empty cargoController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":CargoEditForm" oncomplete="PF('CargoEditDialog').show()" disabled="#{empty cargoController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{cargoController.destroy}" update=":growl,datalist" disabled="#{empty cargoController.selected}"/>
+                            <p:commandButton class="btn btn-success btn-sm" id="createButton" icon="ui-icon-plus"   value="Nuevo" actionListener="#{cargoController.prepareCreate}" update=":CargoCreateForm" oncomplete="PF('CargoCreateDialog').show()"/>
+                            <p:commandButton class="btn btn-info btn-sm" id="viewButton"   icon="ui-icon-search" value="Ver" update=":CargoViewForm" oncomplete="PF('CargoViewDialog').show()" disabled="#{empty cargoController.selected}"/>
+                            <p:commandButton class="btn btn-warning btn-sm" id="editButton"   icon="ui-icon-pencil" value="Editar" update=":CargoEditForm" oncomplete="PF('CargoEditDialog').show()" disabled="#{empty cargoController.selected}"/>
+                            <p:commandButton class="btn btn-danger btn-sm" id="deleteButton" onclick="return ConfirmDelete()" icon="ui-icon-trash"  value="Eliminar" actionListener="#{cargoController.destroy}" update=":growl,datalist" disabled="#{empty cargoController.selected}"/>
                         </f:facet>
                     </p:dataTable>
+                    <br></br>
                 </p:panel>
             </h:form>
 
