--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -6,9 +6,24 @@
       xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-        <title><ui:insert name="title">Default Title</ui:insert></title>
+        <title><ui:insert name="title">Default</ui:insert></title>
         <h:outputStylesheet library="css" name="jsfcrud.css"/>
         <h:outputScript library="js" name="jsfcrud.js"/>
+        <h:outputScript name="bootstrap/js/bootstrap.js" />
+        <h:outputScript name="bootstrap/js/bootstrap.min.js"/>
+        <h:outputStylesheet name="bootstrap/css/bootstrap.css"/>
+        
+        <script type="text/javascript">
+            function ConfirmDelete() {
+                var respuesta = confirm("¿Esta seguro que quiere eliminar este registro?");
+                if (respuesta == true) {
+                    return true;
+                } else {
+
+                    return false;
+                }
+            }
+        </script>
     </h:head>
 
     <h:body>
@@ -16,11 +31,15 @@
         <p:growl id="growl" life="3000" />
 
         <p:layout fullPage="true">
-            <p:layoutUnit position="north" size="65" header="#{bundle.AppName}">
+            <p:layoutUnit position="north" size="65">
+                <center>
+                <h1 style="background-color: #32518A; color: #32518A">Holas</h1>
+                </center>
+                <br></br>
                 <h:form id="menuForm">
                     <p:menubar>
-                        <p:menuitem value="#{bundle.Home}" outcome="/index" icon="ui-icon-home"/>
-                        <p:submenu label="#{bundle.Maintenance}">
+                        <p:menuitem value="Principal" outcome="/index" icon="ui-icon-home"/>
+                        <p:submenu label="Modulos">
                             <p:menuitem value="Cargo" outcome="/Paginas/cargo/List.xhtml" />
                             <p:menuitem value="Categoria" outcome="/Paginas/categoria/List.xhtml" />
                             <p:menuitem value="Cliente" outcome="/Paginas/cliente/List.xhtml" />
@@ -47,12 +66,17 @@
                     </p:menubar>
                 </h:form>
             </p:layoutUnit>
-
-            <p:layoutUnit position="south" size="60">
-                <ui:insert name="footer"/>
+            <p:layoutUnit position="south" size="70">
+                <ui:insert   name="footer">
+                    <center style="background-color: #32518A; color: #32518A">
+                        <p>hbjbj <br></br>
+                        hbjbj </p>
+                    </center>
+                </ui:insert>
             </p:layoutUnit>
-
+            
             <p:layoutUnit position="center">
+                <br></br>
                 <ui:insert name="body"/>
             </p:layoutUnit>
 
