--- a/src/main/webapp/Paginas/categoria/Create.xhtml
+++ b/src/main/webapp/Paginas/categoria/Create.xhtml
@@ -8,17 +8,17 @@
 
     <ui:composition>
 
-        <p:dialog id="CategoriaCreateDlg" widgetVar="CategoriaCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateCategoriaTitle}">
+        <p:dialog id="CategoriaCreateDlg" widgetVar="CategoriaCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="Registro de categorias">
             <h:form id="CategoriaCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{categoriaController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateCategoriaLabel_categoriaid}" for="categoriaid" />
-                        <p:inputText id="categoriaid" value="#{categoriaController.selected.categoriaid}" title="#{bundle.CreateCategoriaTitle_categoriaid}" required="true" requiredMessage="#{bundle.CreateCategoriaRequiredMessage_categoriaid}"/>
-                        <p:outputLabel value="#{bundle.CreateCategoriaLabel_nombre}" for="nombre" />
-                        <p:inputText id="nombre" value="#{categoriaController.selected.nombre}" title="#{bundle.CreateCategoriaTitle_nombre}" required="true" requiredMessage="#{bundle.CreateCategoriaRequiredMessage_nombre}"/>
+                        <p:outputLabel value="Nombre de categoria: " for="nombre" />
+                        <p:inputText class="form-control" id="nombre" value="#{categoriaController.selected.nombre}" title="#{bundle.CreateCategoriaTitle_nombre}" required="true" requiredMessage="#{bundle.CreateCategoriaRequiredMessage_nombre}"/>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{categoriaController.create}" value="#{bundle.Save}" update="display,:CategoriaListForm:datalist,:growl" oncomplete="handleSubmit(args,'CategoriaCreateDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="CategoriaCreateDialog.hide()"/>
+                    <center>
+                        <p:commandButton class="btn btn-outline-success" actionListener="#{categoriaController.create}" value="Guardar" update="display,:CategoriaListForm:datalist,:growl" oncomplete="handleSubmit(args,'CategoriaCreateDialog');"/>
+                        <p:commandButton class="btn btn-outline-danger" value="Cancelar" onclick="CategoriaCreateDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
