--- a/src/main/webapp/Paginas/categoria/Edit.xhtml
+++ b/src/main/webapp/Paginas/categoria/Edit.xhtml
@@ -8,17 +8,17 @@
 
     <ui:composition>
 
-        <p:dialog id="CategoriaEditDlg" widgetVar="CategoriaEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditCategoriaTitle}">
+        <p:dialog id="CategoriaEditDlg" widgetVar="CategoriaEditDialog" modal="true" resizable="false" appendTo="@(body)" header="Editar categoria">
             <h:form id="CategoriaEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{categoriaController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditCategoriaLabel_categoriaid}" for="categoriaid" />
-                        <p:inputText id="categoriaid" value="#{categoriaController.selected.categoriaid}" title="#{bundle.EditCategoriaTitle_categoriaid}" required="true" requiredMessage="#{bundle.EditCategoriaRequiredMessage_categoriaid}"/>
                         <p:outputLabel value="#{bundle.EditCategoriaLabel_nombre}" for="nombre" />
-                        <p:inputText id="nombre" value="#{categoriaController.selected.nombre}" title="#{bundle.EditCategoriaTitle_nombre}" required="true" requiredMessage="#{bundle.EditCategoriaRequiredMessage_nombre}"/>
+                        <p:inputText id="nombre" class="form-control" value="#{categoriaController.selected.nombre}" title="#{bundle.EditCategoriaTitle_nombre}" required="true" requiredMessage="#{bundle.EditCategoriaRequiredMessage_nombre}"/>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{categoriaController.update}" value="#{bundle.Save}" update="display,:CategoriaListForm:datalist,:growl" oncomplete="handleSubmit(args, 'CategoriaEditDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="CategoriaEditDialog.hide()"/>
+                    <center>
+                        <p:commandButton class="btn btn-sm btn-success" actionListener="#{categoriaController.update}" value="Guardar" update="display,:CategoriaListForm:datalist,:growl" oncomplete="handleSubmit(args, 'CategoriaEditDialog');"/>
+                        <p:commandButton class="btn btn-sm btn-danger" value="Cancelar" onclick="CategoriaEditDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
