--- a/src/main/webapp/Paginas/categoria/View.xhtml
+++ b/src/main/webapp/Paginas/categoria/View.xhtml
@@ -8,16 +8,18 @@
 
     <ui:composition>
 
-        <p:dialog id="CategoriaViewDlg" widgetVar="CategoriaViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewCategoriaTitle}">
+        <p:dialog id="CategoriaViewDlg" widgetVar="CategoriaViewDialog" modal="true" resizable="false" appendTo="@(body)" header="Información">
             <h:form id="CategoriaViewForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{categoriaController.selected != null}">
-                        <h:outputText value="#{bundle.ViewCategoriaLabel_categoriaid}"/>
+                        <h:outputText value="Id de categoria: "/>
                         <h:outputText value="#{categoriaController.selected.categoriaid}" title="#{bundle.ViewCategoriaTitle_categoriaid}"/>
-                        <h:outputText value="#{bundle.ViewCategoriaLabel_nombre}"/>
+                        <h:outputText value="Nombre de categoria:"/>
                         <h:outputText value="#{categoriaController.selected.nombre}" title="#{bundle.ViewCategoriaTitle_nombre}"/>
                     </p:panelGrid>
-                    <p:commandButton value="#{bundle.Close}" onclick="CategoriaViewDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-info" value="Aceptar" onclick="CategoriaViewDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
