--- a/src/main/webapp/Paginas/facturacompra/List.xhtml
+++ b/src/main/webapp/Paginas/facturacompra/List.xhtml
@@ -10,12 +10,21 @@
 
 
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListFacturacompraTitle}"></h:outputText>
+            <h:outputText value="Factura Compras"></h:outputText>
         </ui:define>
 
         <ui:define name="body">
             <h:form id="FacturacompraListForm">
-                <p:panel header="#{bundle.ListFacturacompraTitle}">
+                <br></br>
+                <br></br>
+                <center>
+                    <h1 style="background-color: #D4E3FF">Modulo de Factura de Compras</h1>
+                    <br></br>
+                    <br></br>
+                </center>
+                <p:panel style="background-color: #D4E3FF">
+                    <br></br>
+                    <br></br>
                     <p:dataTable id="datalist" value="#{facturacompraController.items}" var="item"
                                  selectionMode="single" selection="#{facturacompraController.selected}"
                                  paginator="true"
@@ -23,19 +32,20 @@
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
                                  >
-
+                        <br></br>
+                        <br></br>
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListFacturacompraTitle_facturacompraid}"/>
+                                <h:outputText value="Id de factura de compra "/>
                             </f:facet>
                             <h:outputText value="#{item.facturacompraid}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListFacturacompraTitle_fechaEmision}"/>
+                                <h:outputText value="Emisión"/>
                             </f:facet>
                             <h:outputText value="#{item.fechaEmision}">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -43,7 +53,7 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListFacturacompraTitle_fechaVencimientoPago}"/>
+                                <h:outputText value="Vencimiento de pago"/>
                             </f:facet>
                             <h:outputText value="#{item.fechaVencimientoPago}">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -51,23 +61,18 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListFacturacompraTitle_descripcion}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.descripcion}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListFacturacompraTitle_pagoid}"/>
+                                <h:outputText value="Id de pago: "/>
                             </f:facet>
                             <h:outputText value="#{item.pagoid}"/>
                         </p:column>
                         <f:facet name="footer">
-                            <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{facturacompraController.prepareCreate}" update=":FacturacompraCreateForm" oncomplete="PF('FacturacompraCreateDialog').show()"/>
-                            <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":FacturacompraViewForm" oncomplete="PF('FacturacompraViewDialog').show()" disabled="#{empty facturacompraController.selected}"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":FacturacompraEditForm" oncomplete="PF('FacturacompraEditDialog').show()" disabled="#{empty facturacompraController.selected}"/>
-                            <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{bundle.Delete}" actionListener="#{facturacompraController.destroy}" update=":growl,datalist" disabled="#{empty facturacompraController.selected}"/>
+                            <p:commandButton class="btn btn-success btn-sm" id="createButton" icon="ui-icon-plus"   value="Nuevo" actionListener="#{facturacompraController.prepareCreate}" update=":FacturacompraCreateForm" oncomplete="PF('FacturacompraCreateDialog').show()"/>
+                            <p:commandButton class="btn btn-info btn-sm" id="viewButton"   icon="ui-icon-search" value="Ver" update=":FacturacompraViewForm" oncomplete="PF('FacturacompraViewDialog').show()" disabled="#{empty facturacompraController.selected}"/>
+                            <p:commandButton class="btn btn-warning btn-sm" id="editButton"   icon="ui-icon-pencil" value="Editar" update=":FacturacompraEditForm" oncomplete="PF('FacturacompraEditDialog').show()" disabled="#{empty facturacompraController.selected}"/>
+                            <p:commandButton class="btn btn-danger btn-sm" onclick="return ConfirmDelete()" id="deleteButton" icon="ui-icon-trash"  value="Eliminar" actionListener="#{facturacompraController.destroy}" update=":growl,datalist" disabled="#{empty facturacompraController.selected}"/>
                         </f:facet>
                     </p:dataTable>
+                    <br></br>
                 </p:panel>
             </h:form>
 
