--- a/src/main/webapp/Paginas/cliente/View.xhtml
+++ b/src/main/webapp/Paginas/cliente/View.xhtml
@@ -8,15 +8,15 @@
 
     <ui:composition>
 
-        <p:dialog id="ClienteViewDlg" widgetVar="ClienteViewDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.ViewClienteTitle}">
+        <p:dialog id="ClienteViewDlg" widgetVar="ClienteViewDialog" modal="true" resizable="false" appendTo="@(body)" header="Información">
             <h:form id="ClienteViewForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{clienteController.selected != null}">
-                        <h:outputText value="#{bundle.ViewClienteLabel_clienteid}"/>
+                        <h:outputText value="Id de cliente: "/>
                         <h:outputText value="#{clienteController.selected.clienteid}" title="#{bundle.ViewClienteTitle_clienteid}"/>
                         <h:outputText value="#{bundle.ViewClienteLabel_empresa}"/>
                         <h:outputText value="#{clienteController.selected.empresa}" title="#{bundle.ViewClienteTitle_empresa}"/>
-                        <h:outputText value="#{bundle.ViewClienteLabel_nombreContacto}"/>
+                        <h:outputText value="Nombre de contacto: "/>
                         <h:outputText value="#{clienteController.selected.nombreContacto}" title="#{bundle.ViewClienteTitle_nombreContacto}"/>
                         <h:outputText value="#{bundle.ViewClienteLabel_area}"/>
                         <h:outputText value="#{clienteController.selected.area}" title="#{bundle.ViewClienteTitle_area}"/>
@@ -28,12 +28,14 @@
                         <h:outputText value="#{clienteController.selected.email}" title="#{bundle.ViewClienteTitle_email}"/>
                         <h:outputText value="#{bundle.ViewClienteLabel_activo}"/>
                         <p:selectBooleanCheckbox value="#{clienteController.selected.activo}" disabled="true"/>
-                        <h:outputText value="#{bundle.ViewClienteLabel_paginaWeb}"/>
+                        <h:outputText value="Pagina web: "/>
                         <h:outputText value="#{clienteController.selected.paginaWeb}" title="#{bundle.ViewClienteTitle_paginaWeb}"/>
                         <h:outputText value="#{bundle.ViewClienteLabel_domicilioFiscal}"/>
-                        <h:outputText value="#{clienteController.selected.domicilioFiscal}" title="#{bundle.ViewClienteTitle_domicilioFiscal}"/>
+                        <h:outputText value="Domicilio fiscal:" title="#{bundle.ViewClienteTitle_domicilioFiscal}"/>
                     </p:panelGrid>
-                    <p:commandButton value="#{bundle.Close}" onclick="ClienteViewDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-info" value="Aceptar" onclick="ClienteViewDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
