--- a/src/main/webapp/Paginas/compradetalle/Create.xhtml
+++ b/src/main/webapp/Paginas/compradetalle/Create.xhtml
@@ -8,31 +8,33 @@
 
     <ui:composition>
 
-        <p:dialog id="CompradetalleCreateDlg" widgetVar="CompradetalleCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateCompradetalleTitle}">
+        <p:dialog id="CompradetalleCreateDlg" widgetVar="CompradetalleCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="Registro detalle de compra">
             <h:form id="CompradetalleCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{compradetalleController.selected != null}">
                         <p:outputLabel value="#{bundle.CreateCompradetalleLabel_cantidad}" for="cantidad" />
-                        <p:inputText id="cantidad" value="#{compradetalleController.selected.cantidad}" title="#{bundle.CreateCompradetalleTitle_cantidad}" required="true" requiredMessage="#{bundle.CreateCompradetalleRequiredMessage_cantidad}"/>
-                        <p:outputLabel value="#{bundle.CreateCompradetalleLabel_precioUnitario}" for="precioUnitario" />
-                        <p:inputText id="precioUnitario" value="#{compradetalleController.selected.precioUnitario}" title="#{bundle.CreateCompradetalleTitle_precioUnitario}" required="true" requiredMessage="#{bundle.CreateCompradetalleRequiredMessage_precioUnitario}"/>
+                        <p:inputText class="form-control" id="cantidad" value="#{compradetalleController.selected.cantidad}" title="#{bundle.CreateCompradetalleTitle_cantidad}" required="true" requiredMessage="#{bundle.CreateCompradetalleRequiredMessage_cantidad}"/>
+                        <p:outputLabel value="Precio Unitario: " for="precioUnitario" />
+                        <p:inputText class="form-control" id="precioUnitario" value="#{compradetalleController.selected.precioUnitario}" title="#{bundle.CreateCompradetalleTitle_precioUnitario}" required="true" requiredMessage="#{bundle.CreateCompradetalleRequiredMessage_precioUnitario}"/>
                         <p:outputLabel value="#{bundle.CreateCompradetalleLabel_importe}" for="importe" />
-                        <p:inputText id="importe" value="#{compradetalleController.selected.importe}" title="#{bundle.CreateCompradetalleTitle_importe}" required="true" requiredMessage="#{bundle.CreateCompradetalleRequiredMessage_importe}"/>
-                        <p:outputLabel value="#{bundle.CreateCompradetalleLabel_ordencompra}" for="ordencompra" />
-                        <p:selectOneMenu id="ordencompra" value="#{compradetalleController.selected.ordencompra}" required="true" requiredMessage="#{bundle.EditCompradetalleRequiredMessage_ordencompra}">
+                        <p:inputText class="form-control" id="importe" value="#{compradetalleController.selected.importe}" title="#{bundle.CreateCompradetalleTitle_importe}" required="true" requiredMessage="#{bundle.CreateCompradetalleRequiredMessage_importe}"/>
+                        <p:outputLabel value="Orden de compra:" for="ordencompra" />
+                        <p:selectOneMenu class="form-text" id="ordencompra" value="#{compradetalleController.selected.ordencompra}" required="true" requiredMessage="#{bundle.EditCompradetalleRequiredMessage_ordencompra}">
                             <f:selectItems value="#{ordencompraController.itemsAvailableSelectOne}"
                                            var="ordencompraItem"
                                            itemValue="#{ordencompraItem}"/>
                         </p:selectOneMenu>
                         <p:outputLabel value="#{bundle.CreateCompradetalleLabel_producto}" for="producto" />
-                        <p:selectOneMenu id="producto" value="#{compradetalleController.selected.producto}" required="true" requiredMessage="#{bundle.EditCompradetalleRequiredMessage_producto}">
+                        <p:selectOneMenu class="form-text" id="producto" value="#{compradetalleController.selected.producto}" required="true" requiredMessage="#{bundle.EditCompradetalleRequiredMessage_producto}">
                             <f:selectItems value="#{productoController.itemsAvailableSelectOne}"
                                            var="productoItem"
                                            itemValue="#{productoItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{compradetalleController.create}" value="#{bundle.Save}" update="display,:CompradetalleListForm:datalist,:growl" oncomplete="handleSubmit(args,'CompradetalleCreateDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="CompradetalleCreateDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-outline-success" actionListener="#{compradetalleController.create}" value="Guardar" update="display,:CompradetalleListForm:datalist,:growl" oncomplete="handleSubmit(args,'CompradetalleCreateDialog');"/>
+                    <p:commandButton class="btn btn-outline-danger" value="Cancelar" onclick="CompradetalleCreateDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
