--- a/src/main/webapp/Paginas/compradetalle/Edit.xhtml
+++ b/src/main/webapp/Paginas/compradetalle/Edit.xhtml
@@ -33,8 +33,10 @@
                                            itemValue="#{productoItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{compradetalleController.update}" value="#{bundle.Save}" update="display,:CompradetalleListForm:datalist,:growl" oncomplete="handleSubmit(args, 'CompradetalleEditDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="CompradetalleEditDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-success" actionListener="#{compradetalleController.update}" value="Guardar" update="display,:CompradetalleListForm:datalist,:growl" oncomplete="handleSubmit(args, 'CompradetalleEditDialog');"/>
+                    <p:commandButton class="btn btn-sm btn-danger" value="Cancelar" onclick="CompradetalleEditDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
