--- a/src/main/webapp/Paginas/empleado/Edit.xhtml
+++ b/src/main/webapp/Paginas/empleado/Edit.xhtml
@@ -8,26 +8,26 @@
 
     <ui:composition>
 
-        <p:dialog id="EmpleadoEditDlg" widgetVar="EmpleadoEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditEmpleadoTitle}">
+        <p:dialog id="EmpleadoEditDlg" widgetVar="EmpleadoEditDialog" modal="true" resizable="false" appendTo="@(body)" header="Editar empleado">
             <h:form id="EmpleadoEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{empleadoController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditEmpleadoLabel_empleadoid}" for="empleadoid" />
-                        <p:inputText id="empleadoid" value="#{empleadoController.selected.empleadoid}" title="#{bundle.EditEmpleadoTitle_empleadoid}" required="true" requiredMessage="#{bundle.EditEmpleadoRequiredMessage_empleadoid}"/>
-                        <p:outputLabel value="#{bundle.EditEmpleadoLabel_fechaVinculo}" for="fechaVinculo" />
-                        <p:calendar id="fechaVinculo" pattern="MM/dd/yyyy" value="#{empleadoController.selected.fechaVinculo}" title="#{bundle.EditEmpleadoTitle_fechaVinculo}" required="true" requiredMessage="#{bundle.EditEmpleadoRequiredMessage_fechaVinculo}" showOn="button"/>
-                        <p:outputLabel value="#{bundle.EditEmpleadoLabel_fechaRetiro}" for="fechaRetiro" />
-                        <p:calendar id="fechaRetiro" pattern="MM/dd/yyyy" value="#{empleadoController.selected.fechaRetiro}" title="#{bundle.EditEmpleadoTitle_fechaRetiro}"  showOn="button"/>
-                        <p:outputLabel value="#{bundle.EditEmpleadoLabel_persona}" for="persona" />
-                        <p:selectOneMenu id="persona" value="#{empleadoController.selected.persona}" required="true" requiredMessage="#{bundle.EditEmpleadoRequiredMessage_persona}">
+                        <p:outputLabel value="Fecha de vinculo: " for="fechaVinculo" />
+                        <p:calendar class="form-text" id="fechaVinculo" pattern="MM/dd/yyyy" value="#{empleadoController.selected.fechaVinculo}" title="#{bundle.EditEmpleadoTitle_fechaVinculo}" required="true" requiredMessage="#{bundle.EditEmpleadoRequiredMessage_fechaVinculo}" showOn="button"/>
+                        <p:outputLabel value="Fecha de retiro: " for="fechaRetiro" />
+                        <p:calendar class="form-text" id="fechaRetiro" pattern="MM/dd/yyyy" value="#{empleadoController.selected.fechaRetiro}" title="#{bundle.EditEmpleadoTitle_fechaRetiro}"  showOn="button"/>
+                        <p:outputLabel value="Id persona: " for="persona" />
+                        <p:selectOneMenu class="form-text" id="persona" value="#{empleadoController.selected.persona}" required="true" requiredMessage="#{bundle.EditEmpleadoRequiredMessage_persona}">
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{personaController.itemsAvailableSelectOne}"
                                            var="personaItem"
                                            itemValue="#{personaItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{empleadoController.update}" value="#{bundle.Save}" update="display,:EmpleadoListForm:datalist,:growl" oncomplete="handleSubmit(args, 'EmpleadoEditDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="EmpleadoEditDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-sm btn-success" actionListener="#{empleadoController.update}" value="Guardar" update="display,:EmpleadoListForm:datalist,:growl" oncomplete="handleSubmit(args, 'EmpleadoEditDialog');"/>
+                    <p:commandButton class="btn btn-sm btn-danger" value="Cancelar" onclick="EmpleadoEditDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
