--- a/src/main/webapp/Paginas/facturacompra/Create.xhtml
+++ b/src/main/webapp/Paginas/facturacompra/Create.xhtml
@@ -8,27 +8,27 @@
 
     <ui:composition>
 
-        <p:dialog id="FacturacompraCreateDlg" widgetVar="FacturacompraCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateFacturacompraTitle}">
+        <p:dialog id="FacturacompraCreateDlg" widgetVar="FacturacompraCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="Registrar factura de compra">
             <h:form id="FacturacompraCreateForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{facturacompraController.selected != null}">
-                        <p:outputLabel value="#{bundle.CreateFacturacompraLabel_facturacompraid}" for="facturacompraid" />
-                        <p:inputText id="facturacompraid" value="#{facturacompraController.selected.facturacompraid}" title="#{bundle.CreateFacturacompraTitle_facturacompraid}" required="true" requiredMessage="#{bundle.CreateFacturacompraRequiredMessage_facturacompraid}"/>
-                        <p:outputLabel value="#{bundle.CreateFacturacompraLabel_fechaEmision}" for="fechaEmision" />
-                        <p:calendar id="fechaEmision" pattern="MM/dd/yyyy" value="#{facturacompraController.selected.fechaEmision}" title="#{bundle.EditFacturacompraTitle_fechaEmision}" required="true" requiredMessage="#{bundle.EditFacturacompraRequiredMessage_fechaEmision}" showOn="button"/>
-                        <p:outputLabel value="#{bundle.CreateFacturacompraLabel_fechaVencimientoPago}" for="fechaVencimientoPago" />
-                        <p:calendar id="fechaVencimientoPago" pattern="MM/dd/yyyy" value="#{facturacompraController.selected.fechaVencimientoPago}" title="#{bundle.EditFacturacompraTitle_fechaVencimientoPago}" required="true" requiredMessage="#{bundle.EditFacturacompraRequiredMessage_fechaVencimientoPago}" showOn="button"/>
-                        <p:outputLabel value="#{bundle.CreateFacturacompraLabel_descripcion}" for="descripcion" />
-                        <p:inputText id="descripcion" value="#{facturacompraController.selected.descripcion}" title="#{bundle.CreateFacturacompraTitle_descripcion}" required="true" requiredMessage="#{bundle.CreateFacturacompraRequiredMessage_descripcion}"/>
-                        <p:outputLabel value="#{bundle.CreateFacturacompraLabel_pagoid}" for="pagoid" />
-                        <p:selectOneMenu id="pagoid" value="#{facturacompraController.selected.pagoid}" >
+                        <p:outputLabel value="Fecha de emisión: " for="fechaEmision" />
+                        <p:calendar class="form-text" id="fechaEmision" pattern="MM/dd/yyyy" value="#{facturacompraController.selected.fechaEmision}" title="#{bundle.EditFacturacompraTitle_fechaEmision}" required="true" requiredMessage="#{bundle.EditFacturacompraRequiredMessage_fechaEmision}" showOn="button"/>
+                        <p:outputLabel value="Fecha de vencimiento de pago: " for="fechaVencimientoPago" />
+                        <p:calendar class="form-text" id="fechaVencimientoPago" pattern="MM/dd/yyyy" value="#{facturacompraController.selected.fechaVencimientoPago}" title="#{bundle.EditFacturacompraTitle_fechaVencimientoPago}" required="true" requiredMessage="#{bundle.EditFacturacompraRequiredMessage_fechaVencimientoPago}" showOn="button"/>
+                        <p:outputLabel value="Descripción: " for="descripcion" />
+                        <p:inputText class="form-text" id="descripcion" value="#{facturacompraController.selected.descripcion}" title="#{bundle.CreateFacturacompraTitle_descripcion}" required="true" requiredMessage="#{bundle.CreateFacturacompraRequiredMessage_descripcion}"/>
+                        <p:outputLabel value="Id de pago: " for="pagoid" />
+                        <p:selectOneMenu class="form-text" id="pagoid" value="#{facturacompraController.selected.pagoid}" >
                             <f:selectItems value="#{pagocompraController.itemsAvailableSelectOne}"
                                            var="pagoidItem"
                                            itemValue="#{pagoidItem}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-                    <p:commandButton actionListener="#{facturacompraController.create}" value="#{bundle.Save}" update="display,:FacturacompraListForm:datalist,:growl" oncomplete="handleSubmit(args,'FacturacompraCreateDialog');"/>
-                    <p:commandButton value="#{bundle.Cancel}" onclick="FacturacompraCreateDialog.hide()"/>
+                    <center>
+                    <p:commandButton class="btn btn-outline-success" actionListener="#{facturacompraController.create}" value="Guardar" update="display,:FacturacompraListForm:datalist,:growl" oncomplete="handleSubmit(args,'FacturacompraCreateDialog');"/>
+                    <p:commandButton class="btn btn-outline-danger" value="Cancelar" onclick="FacturacompraCreateDialog.hide()"/>
+                    </center>
                 </h:panelGroup>
             </h:form>
         </p:dialog>
